syntax = "proto2";
package itunespb;

import "track.proto";
import "playlist.proto";
import "time.proto";

message Library {
    optional string   file_name             = 1;
    optional int32    major_version         = 2;
    optional int32    minor_version         = 3;
    optional string   application_version   = 4;
    optional Time     date                  = 5;
    optional int32    features              = 6;
    optional bool     show_content_ratings  = 7;
    optional uint64   persistent_id         = 8;
    optional string   music_folder          = 9;
    repeated Track    tracks                = 10;
    repeated Playlist playlists             = 11;
}
