syntax = "proto2";
package itunespb;

import "time.proto";

message Track {
    optional int32     id                    = 1;
    optional string    album                 = 2;
    optional string    album_artist          = 3;
    optional int32     album_rating          = 4;
    optional bool      album_rating_computed = 5;
    optional string    artist                = 6;
	optional int32     artwork_count         = 7;
	optional int32     bpm                   = 8;
	optional int32     bit_rate              = 9;
	optional bool      clean                 = 10;
	optional string    comments              = 11;
	optional bool      compilation           = 12;
	optional string    composer              = 13;
	optional string    content_rating        = 14;
	optional Time      date                  = 15;
	optional Time      date_added            = 16;
	optional Time      date_modified         = 17;
	optional bool      disabled              = 18;
	optional int32     disc_count            = 19;
	optional int32     disc_number           = 20;
	optional string    episode               = 21;
	optional int32     episode_order         = 22;
	optional bool      explicit              = 23;
	optional int32     file_folder_count     = 24;
	optional int32     file_type             = 25;
	optional string    genre                 = 26;
	optional string    grouping              = 27;
	optional bool      has_video             = 28;
	optional string    kind                  = 29;
	optional int32     library_folder_count  = 30;
    optional string    location              = 31;
	optional bool      master                = 32;
	optional bool      movie                 = 33;
	optional bool      music_video           = 34;
	optional string    name                  = 35;
	optional bool      part_of_gapless_album = 36;
	optional uint64    persistent_id         = 37;
	optional int32     play_count            = 38;
	optional int32     play_date_garbage     = 39;
	optional Time      play_date             = 40;
	optional bool      podcast               = 41;
	optional bool      protected             = 42;
	optional bool      purchased             = 43;
	optional Time      purchase_date         = 44;
	optional int32     rating                = 45;
	optional bool      rating_computed       = 46;
	optional Time      release_date          = 47;
	optional int32     sample_rate           = 48;
	optional int32     season                = 49;
	optional string    series                = 50;
	optional int64     size                  = 51;
	optional int32     skip_count            = 52;
	optional Time      skip_date             = 53;
	optional string    sort_album            = 54;
	optional string    sort_album_artist     = 55;
	optional string    sort_artist           = 56;
	optional string    sort_composer         = 57;
	optional string    sort_name             = 58;
	optional string    sort_series           = 59;
	optional int32     stop_time             = 60;
	optional bool      tv_show               = 61;
	optional int32     total_time            = 62;
	optional int32     track_count           = 63;
	optional int32     track_id              = 64;
	optional int32     track_number          = 65;
	optional string    track_type            = 66;
	optional bool      unplayed              = 67;
	optional int32     volume_adjustment     = 68;
    optional string    work                  = 69;
	optional int32     year                  = 70;
}
